--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="./assets/1.png" alt="">
+    <img src="./assets/1.JPG" alt="">
+    <img src="./assets/2.JPG" alt="">
+    <img src="./assets/3.JPG" alt="">
+    <img src="./assets/4.JPG" alt="">
 </body>
 </html>
